--- a/style.css
+++ b/style.css
@@ -116,6 +116,21 @@ section {
     font-size: 15px;
 }
 
+.contact-form {
+    padding-top: 5px;
+}
+
+.form-group input, .form-group textarea {
+    border-radius: 0px;
+    border-color: #ddd;
+}
+
+.form-control:focus {
+    box-shadow: none;
+    border-radius: 0px;
+    border-color: #ddd;
+}
+
 @media (max-width: 991.98px) {
     .right-side {
         border-top: 1px solid #ddd;
