--- a/style.css
+++ b/style.css
@@ -100,6 +100,10 @@ section {
     margin-bottom: 0px;
 }
 
+.school {
+    margin-top: 10px;
+}
+
 .time {
     color: #71c9ce;
     font-size: 15px;
