--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@ h2 {
 .btn-cv {
     padding: 10px;
     color: white;
-    background-color: #71c9ce;
+    background-color: #64b2b6;
     width: 100%;
     border-radius: 0px;
 }
@@ -58,7 +58,7 @@ h2 {
 .btn-cvs {
     padding: 10px;
     color: white;
-    background-color:cornflowerblue;
+    background-color: #71c9ce;
     width: 100%;
     border-radius: 0px;
 }
