--- a/stylee.css
+++ b/stylee.css
@@ -18,10 +18,11 @@ div {
     font-size: 15;
 }
 
+
 .card {
     border: 2px solid darkslateblue;
-    width: 400px;
-    padding: 15px;
+    width: 600px;
+    padding: 30px;
     margin: 40px auto;
 
 }
@@ -33,3 +34,11 @@ form {
 b {
     font-size: 20px;
 }
+
+.btn {
+    width: 110px;
+    margin: 20px 25px 5px;
+    padding: 4px;
+    border-radius: 3px;
+}
+ 
