--- a/calculator.css
+++ b/calculator.css
@@ -78,29 +78,28 @@ button.black {
     margin-top: 13px;
 }
 
-footer {
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    text-align: center;
-    align-content: center;
-    padding: 10px 0;
-    margin-top: 20px;
+.footer {
+position: absolute;
+bottom: 0;
+width: 100%;
+height: 60px;
+line-height: 60px;
+background-color: #f5f5f5;
+}
+
+footer .container {
     width: auto;
-    min-height: 60px;
-    height: auto;
-    color: #ffffff;
-    background-color: #000000;
+    max-width: 680px;
+    padding: 15px 15px;
 }
 
 footer .author {
-    margin-top: 15px;
+    
 }
 
 footer i {
     color: #ffff;
     font-size: 20px;
-    margin: 15px;
 }
 
 footer .fa-github:hover {
